<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.AuthActivity">
    <com.loopeer.shadow.ShadowView
        android:paddingBottom="10dp"
        android:layout_margin="20dp"
        android:minWidth="125dp"
        app:backgroundColor="@color/colorPrimary"
        app:shadowColor="@color/colorPrimary"
        app:shadowRadius="15dp"
        app:shadowMargin="15dp"
        android:id="@+id/shadow_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="7dp"
>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_margin="20dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/image_view_login"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_user_two"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_below="@id/image_view_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayout">
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_input_layout_email"
                        android:layout_width="match_parent"
                        android:theme="@style/edit_text_view"
                        android:layout_height="wrap_content"
                        app:errorTextAppearance="@color/light_white"
                        android:hint="@string/hint_email">

                        <EditText
                            android:textColor="@color/white"
                            android:id="@+id/login_input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@android:color/white"
                            android:inputType="textEmailAddress"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_input_layout_password"
                        android:layout_width="match_parent"
                        android:theme="@style/edit_text_view"
                        android:hint="@string/hint_password"
                        app:errorTextAppearance="@color/light_white"
                        android:layout_height="wrap_content">

                        <EditText
                            android:textColor="@color/white"
                            android:id="@+id/login_input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/login_btn"
                        android:text="@string/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:textStyle="bold"
                        android:theme="@style/Button_retry"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <LinearLayout
                        android:layout_marginTop="20dp"

                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/login_text_view_to_password"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:textSize="13sp"
                            android:text="@string/forgot_password"
                            android:textColor="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                        <TextView
                            android:id="@+id/login_text_view_to_register"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:gravity="right"
                            android:textSize="13sp"
                            android:text="@string/registre_button_login"
                            android:textColor="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
        </ScrollView>
    </com.loopeer.shadow.ShadowView>
</RelativeLayout>
