<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.AuthActivity">
    <com.loopeer.shadow.ShadowView
        android:paddingBottom="10dp"
        android:minWidth="125dp"
        android:layout_margin="20dp"
        app:backgroundColor="@color/colorPrimary"
        app:shadowColor="@color/colorPrimary"
        app:shadowRadius="15dp"
        app:shadowMargin="15dp"
        android:id="@+id/shadow_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="7dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView

            android:layout_margin="20dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/image_view_login"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_user_two"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_below="@id/image_view_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/linearLayout2">
                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/register_input_layout_name"
                        android:layout_width="match_parent"
                        android:theme="@style/edit_text_view"
                        android:layout_height="wrap_content"
                        app:errorTextAppearance="@color/light_white"
                        android:hint="@string/hint_name">
                        <EditText
                            android:textColor="@color/white"
                            android:id="@+id/register_input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@android:color/white"
                            android:inputType="textPersonName"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/register_input_layout_email"
                        android:layout_width="match_parent"
                        android:theme="@style/edit_text_view"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email">
                        <EditText
                            android:textColor="@color/white"
                            android:id="@+id/register_input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@android:color/white"
                            android:inputType="textEmailAddress"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/register_input_layout_password"
                        android:layout_width="match_parent"
                        android:theme="@style/edit_text_view"
                        android:hint="@string/hint_password"
                        app:errorTextAppearance="@color/light_white"
                        android:layout_height="wrap_content">

                        <EditText
                            android:textColor="@color/white"
                            android:id="@+id/register_input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/register_input_layout_password_confirm"
                        android:layout_width="match_parent"
                        android:theme="@style/edit_text_view"
                        app:errorTextAppearance="@color/light_white"
                        android:hint="@string/hint_password_confirm"
                        android:layout_height="wrap_content">

                        <EditText
                            android:textColor="@color/white"
                            android:id="@+id/register_input_password_confirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <Button
                        android:id="@+id/register_btn"
                        android:text="@string/registre_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:theme="@style/Button_retry"
                        android:textColor="@color/colorPrimaryDark"
                        />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>
        </ScrollView>
    </com.loopeer.shadow.ShadowView>
</RelativeLayout>
