<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:frisson="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.SupportActivity">
    <RelativeLayout
        android:id="@+id/acb"
        android:background="@drawable/bg_bar"
        android:layout_width="match_parent"
        android:layout_height="210dp">
        <include layout="@layout/wave"></include>
    </RelativeLayout>
    <android.support.design.widget.AppBarLayout
        app:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout">
        <android.support.v7.widget.Toolbar
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent" />
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_below="@+id/appBarLayout"
        android:padding="20dp"
        android:tint="@color/white"
        app:srcCompat="@drawable/ic_email_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/imageView" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/acb">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/support_input_layout_email"
                android:theme="@style/textview_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/support_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"

                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/support_input_layout_name"
                android:layout_width="match_parent"
                android:theme="@style/textview_login"

                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/support_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/support_input_layout_message"
                android:layout_width="match_parent"
                android:theme="@style/textview_login"
                android:layout_height="wrap_content">

                <EditText
                    android:gravity="top"
                    android:lines="4"
                    android:id="@+id/support_input_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/hint_message" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton

        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/support_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end|bottom"
        app:backgroundTint="@color/colorPrimary"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="20dp"
        app:elevation="6dp"
        app:borderWidth="1dp"
        android:tint="@color/white"
        app:srcCompat="@drawable/ic_send" />
        </RelativeLayout>
</RelativeLayout>
